--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0%;
+  padding: 0%;
+}
+*{
+    margin: 0%;
+  padding: 0%;
 }
 
 @layer utilities {
